Added simple divs

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saper</title>
+    <title>Minesweeper</title>
+    <link rel="stylesheet" href="styles/style.css">
     <script src="js/functions.js" defer></script>
+    <script src="js/drawBoard.js" defer></script>
     <script src="js/index.js" defer></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="game">
+
+        </div>
+    </div>
 </body>
 </html>
