--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="js/jquery-3.5.1.min.js" defer></script>
     <script src="js/functions.js" defer></script>
     <script src="js/drawBoard.js" defer></script>
     <script src="js/index.js" defer></script>
