--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 <body>
     <div id="container">
-        <div id="game">
-
+        <div id="main">
+            <div id="top">
+                <div id="face"></div>
+            </div>
+            <div id="game">
+            </div>
         </div>
     </div>
 </body>
