Added divs for bombs number and timer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div id="container">
         <div id="main">
             <div id="top">
+                <div id="bombs">000</div>
                 <div id="face"></div>
+                <div id="time">000</div>
             </div>
             <div id="game">
             </div>
