Added smiley face img as options menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div id="main">
             <div id="top">
                 <div id="bombs">000</div>
-                <div id="face" onclick="toggleOptions()"></div>
+                <div id="face" onclick="toggleOptions()">
+                    <img src="img/normal.png">
+                </div>
                 <div id="time">000</div>
             </div>
             <div id="game"></div>
